--- a/Clase2/Base/MyGame.csproj
+++ b/Clase2/Base/MyGame.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="Bullet.cs" />
     <Compile Include="Character.cs" />
+    <Compile Include="CharacterController.cs" />
     <Compile Include="Enemy.cs" />
     <Compile Include="Font.cs" />
     <Compile Include="Engine.cs" />
